# ekg-generator

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  LICENSE  README.md  pyproject.toml  serve.sh
.github/workflows/: pages.yml
ekg_generator/: generate.py
ekg_generator/engine/: additive.py  capno.py  ecgsyn.py  noise.py  pleth.py  scheduler.py
ekg_generator/monitor/: layout.py  renderer.py  sweep.py
ekg_generator/rhythms/: registry.py
ekg_generator/scenarios/: presets.py
monitor_simulator/: README.md
monitor_simulator/backend/: main.py  models.py
monitor_simulator/frontend/: CNAME  index.html
monitor_simulator/frontend/controller/: controller.js  index.html  style.css
monitor_simulator/frontend/controller/sounds/: charge.m4a
monitor_simulator/frontend/monitor/: index.html  monitor.js  renderer.js  style.css
monitor_simulator/frontend/shared/: channel.js
prev-prompts/: Untitled 10.txt  Untitled 11.txt  Untitled 9.txt
scripts/: compare_litfl.py  demo.py  demo_improved.py  extract_short_diagnoses.py  scrape_litfl_ecg.py
